projects/vb6parse/snapshots/parsers/cst/type_hinting/deftype_statements/deftype_partial_alphabet.snap
---
source: projects/vb6parse/tests/type_hinting/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefIntKeyword
          text: DefInt
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: A
        - kind: SubtractionOperator
          text: "-"
        - kind: Identifier
          text: M
        - kind: Newline
          text: "\n"
    - kind: DefTypeStatement
      children:
        - kind: DefLngKeyword
          text: DefLng
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: N
        - kind: SubtractionOperator
          text: "-"
        - kind: Identifier
          text: Z
        - kind: Newline
          text: "\n"
