projects/vb6parse/snapshots/parsers/cst/type_hinting/deftype_statements/deftype_with_spaces.snap
---
source: projects/vb6parse/tests/type_hinting/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefIntKeyword
          text: DefInt
        - kind: Whitespace
          text: "  "
        - kind: Identifier
          text: A
        - kind: Whitespace
          text: " "
        - kind: SubtractionOperator
          text: "-"
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Z
        - kind: Newline
          text: "\n"
